déplacement up/down et caméra

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -64,6 +64,9 @@
     "*.html": "html",
     "xstring": "cpp",
     "xiosbase": "cpp",
-    "vector": "cpp"
+    "vector": "cpp",
+    "array": "cpp",
+    "deque": "cpp",
+    "string_view": "cpp"
   }
 }
