--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,9 +57,9 @@
   "C_Cpp_Runner.useLinkTimeOptimization": false,
   "C_Cpp_Runner.msvcSecureNoWarnings": false,
   "files.associations": {
+    "*.dbclient-js": "javascript",
     "*.sqlbook": "sql",
     "*.ndjson": "jsonl",
-    "*.dbclient-js": "javascript",
     "*.embeddedhtml": "html",
     "*.html": "html",
     "xstring": "cpp",
@@ -67,6 +67,8 @@
     "vector": "cpp",
     "array": "cpp",
     "deque": "cpp",
-    "string_view": "cpp"
+    "string_view": "cpp",
+    "sstream": "cpp",
+    "cmath": "cpp"
   }
 }
